--- a/hw7/package.json
+++ b/hw7/package.json
@@ -11,14 +11,17 @@
   "devDependencies": {
     "autoprefixer": "^8.1.0",
     "browser-sync": "^2.23.6",
+    "del": "^3.0.0",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^5.0.0",
     "gulp-if": "^2.0.2",
+    "gulp-imagemin": "^4.1.0",
     "gulp-minify-css": "^1.2.4",
     "gulp-notify": "^3.2.0",
     "gulp-sass": "^3.1.0",
     "gulp-uglify": "^3.0.0",
-    "gulp-useref": "^3.1.4"
+    "gulp-useref": "^3.1.4",
+    "run-sequence": "^2.2.1"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
